# protecc

./: .dockerignore  .drone.yml  .gitignore  Cargo.toml  Dockerfile  build.rs  pcap_upload_endpoint.py
backend/: .gitignore  Cargo.toml  build.rs  deployment.notes
backend/fuzz/: Cargo.toml
backend/fuzz/fuzz_targets/: reconstruct_segments.rs
backend/src/: api.rs  bin.rs  configuration.rs  counters.rs  database.rs  lib.rs  main.rs  pcapmanager.rs  pcapreader.rs  pipeline.rs  query.rs  reassembly.rs  scripting.rs  serde_aux.rs  stream.rs  throttled_watch.rs  window.rs  wirefilter.rs  workq.rs  wsserver.rs
backend/src/starlark/: mod.rs
elm-frontend/: .gitignore  custom.html  elm.json  package.json  serve.sh
elm-frontend/src/: Dashboard.elm  Main.elm  Routing.elm  Socket.elm  Style.elm
frontend/: build.bash  package.json  packages.dhall  spago.dhall
frontend/assets/: index.html
frontend/src/: Configuration.js  Configuration.purs  Dashboard.purs  Dataview.js  Dataview.purs  Dropdown.purs  Main.purs  MainComponent.purs  Numeral.js  Numeral.purs  Query.purs  SemanticUI.purs  Socket.purs  SocketIO.js  SocketIO.purs  Stream.purs  Streams.purs  Tags.purs  Util.js  Util.purs  WindowTable.purs
frontend/src/config/: Configuration.purs  ConfigurationTypes.purs
frontend/src/editor/: SkarlarkEditor.js  SkarlarkEditor.purs  StarlarkEditor.js  StarlarkEditor.purs
frontend/src/socket/: Socket.js  Socket.purs  SocketIO.js  SocketIO.purs
frontend/src/util/: Keyevent.js  Keyevent.purs  Numeral.purs  SemanticUI.purs  Util.js  Util.purs
grpc/: shared.proto  tools.proto
plugins/: dice_roll.py  test.py  ws_unmask.py
protecc/: package.json
protecc/public/: index.html  manifest.json
protecc/src/: App.tsx  Util.ts
protecc/src/Api/: ProteccApi.tsx  Types.ts
protecc/src/AppLayout/: AppLayout.tsx
protecc/src/Components/: ColoredDot.tsx  ColoredLabel.tsx  DataView.tsx  LightweightTable.tsx  Loading.jsx  Loading.tsx  StreamDetails.tsx  Tags.tsx
protecc/src/Configuration/: Configuration.tsx
protecc/src/Dashboard/: Dashboard.tsx
protecc/src/Monaco/: StarlarkLanguageProvider.tsx
protecc/src/Pipeline/: Pipeline.tsx
protecc/src/Query/: EditorWidget.tsx  Query.tsx
protecc/src/Stream/: Stream.tsx
protecc/src/Streams/: Streams.tsx
protecc/src/Taggers/: Taggers.tsx
proxy/: index.js  package.json
purs-frontend/: .gitignore  package.json  spago.dhall
purs-frontend/assets/: index.html
purs-frontend/src/: Dashboard.purs  JsonParsing.purs  Main.purs  MainComponent.purs  SemanticUI.purs  Socket.js  Socket.purs  SocketIO.js  SocketIO.purs  Util.purs
src/: api.rs  main.rs  reassembly.rs
test-proxy/: index.js
