[package]
name = "snacc"
version = "0.1.0"
authors = ["Mrmaxmeier <Mrmaxmeier@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0.0", features = ["macros", "sync", "time", "net", "rt", "rt-multi-thread", "io-util"] }
tokio-util = { version = "0.6.0", features = ["time"] }
tokio-stream = { version = "0.1.5", features = ["time", "sync"] }
tokio-tungstenite = "0.14.0"
futures = { version = "0.3.5", default-features = false, features = ["std", "async-await"] }
pktparse = "0.5.0"
pcap-parser = { version = "0.11.0", features = ["data"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = { git = "https://github.com/spacejam/sled", rev = "e4640e0773595229f398438886f19bca6f7326a2", features = ["compression"] } # random recent commit
metrohash = "1.0.6"
regex = "1.3.1"
derive_more = "0.99.2"
lazy_static = "1.4.0"
tracyrs = { git = "https://github.com/Mrmaxmeier/tracyrs", default-features = false, features = ["tracy_on_demand"] }
base64 = "0.13.0"
starlark = { git = "https://github.com/Mrmaxmeier/starlark-rust.git", branch="ad-fixes" }
zstd = "0.6.0"
num_cpus = "1.12.0"
notify = "5.0.0-pre.3"
smallvec = { version = "1.2.0", features = ["serde"] }
arbitrary = { version = "1.0.0", features = ["derive"] }
wirefilter-engine = { git = "https://github.com/Mrmaxmeier/wirefilter.git", branch="dominating-boolean-matches" }

[features]
tracy = ["tracyrs/tracy_enable"]


[lib]
name = "snacc"
path = "src/lib.rs"

[[bin]]
name = "snacc"
path = "src/bin.rs"
