[package]
name = "snacc"
version = "0.1.0"
authors = ["Mrmaxmeier <Mrmaxmeier@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.17.0", features = ["macros", "sync", "time", "net", "rt", "rt-multi-thread", "io-util", "tracing"] }
tokio-util = { version = "0.7.0", features = ["time"] }
tokio-stream = { version = "0.1.8", features = ["time", "sync"] }
tokio-tungstenite = "0.17.1"
futures = { version = "0.3.21", default-features = false, features = ["std", "async-await"] }
pktparse = "0.7.1"
pcap-parser = { version = "0.13.0", features = ["data"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sled = { version = "0.34.7", features = ["compression"] }
metrohash = "1.0.6"
regex = "1.5.4"
derive_more = "0.99.17"
lazy_static = "1.4.0"
tracyrs = { git = "https://github.com/Mrmaxmeier/tracyrs", default-features = false, features = ["tracy_on_demand"] }
base64 = "0.13.0"
starlark = { git = "https://github.com/Mrmaxmeier/starlark-rust.git", branch="ad-fixes" }
zstd = "0.9"
num_cpus = "1.13.1"
notify = "4.0.17"
smallvec = { version = "1.8.0", features = ["serde"] }
arbitrary = { version = "1.1.0", features = ["derive"] }
wirefilter-engine = { git = "https://github.com/Mrmaxmeier/wirefilter.git", branch="dominating-boolean-matches" }
console-subscriber = "0.1.3"

[features]
tracy = ["tracyrs/tracy_enable"]


[lib]
name = "snacc"
path = "src/lib.rs"

[[bin]]
name = "snacc"
path = "src/bin.rs"
