[package]
name = "snacc"
version = "0.1.0"
authors = ["Mrmaxmeier <Mrmaxmeier@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.17.0", features = ["macros", "sync", "time", "net", "rt", "rt-multi-thread", "io-util", "tracing"] }
tokio-util = { version = "0.7.0", features = ["time"] }
tokio-stream = { version = "0.1.8", features = ["time", "sync"] }
tokio-tungstenite = "0.17.1"
futures = { version = "0.3.21", default-features = false, features = ["std", "async-await"] }
pktparse = "0.7.1"
pcap-parser = { version = "0.14", features = ["data"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
# sled = { version = "0.34.7", features = ["compression"] }
sled = { git = "https://github.com/spacejam/sled", features = ["compression"], branch = "dependabot/cargo/zstd-0.11.2" }
metrohash = "1.0.6"
regex = "1.5.4"
derive_more = "0.99.17"
lazy_static = "1.4.0"
tracyrs = { git = "https://github.com/Mrmaxmeier/tracyrs", default-features = false, features = ["tracy_on_demand"] }
base64 = "0.13.0"

# TODO(deps): the 0.7 release of starlark_derive seems broken.
# (UnpackValue<'_> is not implemented for &mut Evaluator)
# starlark = { version = "0.8", optional = true }
# starlark_derive = { version="0.7", optional=true }
starlark = { git = "https://github.com/facebookexperimental/starlark-rust", optional = true }
starlark_derive = { git = "https://github.com/facebookexperimental/starlark-rust", optional=true }
gazebo = { version = "0.8", optional = true}
anyhow = { version = "1.0.58", optional = true }

zstd = "0.11"
num_cpus = "1.13.1"
notify-debouncer-mini = { version = "0.2", default-features = false }
smallvec = { version = "1.8.0", features = ["serde"] }
arbitrary = { version = "1.1.0", features = ["derive"] }
wirefilter-engine = { git = "https://github.com/Mrmaxmeier/wirefilter.git", branch="dominating-boolean-matches", optional=true }
console-subscriber = "0.1.3"
clap = { version = "3.2.20", features = ["derive"] }

[features]
tracy = ["tracyrs/tracy_enable"]
starlark = ["dep:starlark", "dep:starlark_derive", "dep:gazebo", "dep:anyhow"]
wirefilter = ["dep:wirefilter-engine"]
default = ["starlark", "wirefilter"]

[lib]
name = "snacc"
path = "src/lib.rs"

[[bin]]
name = "snacc"
path = "src/bin.rs"
